# opencv-sample

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/eu/sisik/opencvsample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/eu/sisik/opencvsample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/eu/sisik/opencvsample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
